k8s/web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cortex-dc
  labels:
    name: cortex-dc
    environment: production
